@@ -277,7 +277,8 @@ changes to languages because of Bugzilla reports.
 * (bug 27681) Set $namespaceGenderAliases for Portuguese (pt and pt-br)
 * (bug 27785) Fallback language for Kabardian (kbd) is English now.
 * (bug 27825) Raw watchlist edit message now uses formatted numbers.
-* (bug 28040) Turkish: properly lower case 'I' to 'ı' (dotless i)
+* (bug 28040) Turkish: properly lower case 'I' to 'ı' (dotless i) and
+  uppercase 'i' to 'İ' (dotted i)
 
 == Compatibility ==
 
